[package]
name = "gist-rs"
version = "0.1.0"
authors = ["Mahdi robatioor <mahdi.robatipoor@gmail.com>"]
description = "github gist command line tool"
homepage = "https://github.com/robatipoor/gist-rs"
keywords = ["github", "gist","cli"]
license = "MIT"
repository = "https://github.com/robatipoor/gist-rs"
edition = "2018"

[dependencies]
reqwest = "0.9.8"
serde_derive = "1.0.85"
serde_json = "1.0.36"
serde = "1.0.85"
lazy_static = "1.2.0"
clap = "2.32.0"
dirs = "1.0.4"
error-chain = "0.12.0"
colored = "1.7.0"
